EA-2830: Implement synchronous permanent deletion of entities
- requires profile=sync request param